assets/css/style.css
/* Source: http://uncommon-template.webflow.io/
 * CSS at https://uploads-ssl.webflow.com/5b2a8936920a797db4639905/css/uncommon-template.webflow.2eb7f7366.css */
html, html * {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
    font-family: Roboto, sans-serif;
    color: #333;
    font-size: 14px;
    line-height: 20px;
}

main {
	padding-top: 100px;
	position:relative;
}

h1 {
  position: relative;
  margin-top: 0px;
  margin-bottom: 10px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  color: #000;
  font-size: 14vh;
  line-height: 14vh;
  font-weight: 400;
}

h2 {
  margin-top: 0px;
  margin-bottom: 20px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  font-size: 38px;
  line-height: 48px;
}
  
h3 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-family: Roboto, sans-serif;
  font-size: 24px;
  line-height: 38px;
  font-weight: 700;
}
  
h4 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-family: Roboto, sans-serif;
  color: #333;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  text-transform: uppercase;
}
  
h5 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-family: Roboto, sans-serif;
  color: grey;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}
  
p {
  margin-bottom: 20px;
  font-family: Roboto, sans-serif;
  color: grey;
  font-size: 18px;
  /*line-height: 32px;*/
  font-weight: 300;
}

a {
  padding-bottom: 5px;
  box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, .1);
  -webkit-transition: box-shadow 200ms ease, color 200ms ease;
  transition: box-shadow 200ms ease, color 200ms ease;
  font-family: Roboto, sans-serif;
  color: grey;
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
}
  
a:hover {
  box-shadow: inset 0 -2px 0 0 #000;
  color: #000;
}

ul {
    margin-top: 0;
    margin-bottom: 10px;
    padding-left: 40px;
}

li {
	font-family: Roboto, sans-serif;
	color: black;
	font-size: 16px;
	font-weight: 250;
}
  
img {
  display: inline-block;
  max-width: 100%;
}
  
/* NAVIGATION BAR */
.navbar {
  position: fixed;
  padding: 1vh 5vw 0vh;
  background-color: white;
  height: 100px;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25);
  width: 100%;
  z-index: 999999;
}

.w-nav-brand {
  position: relative;
  float: left;
  text-decoration: none;
  color: #333333;
}

.brand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 90px;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px none #000;
  box-shadow: none;
}

.brand:hover {
  border-bottom-style: none;
  box-shadow: none;
}

.brand.w--current {
  box-shadow: none;
}

.brand.w--current:hover {
  box-shadow: none;
}

.nav-menu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 40px;
  padding-bottom: 2vh;
  float: right;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.link-nav {
  margin-right: 10px;
  margin-left: 10px;
  padding: 0px 0px 5px;
  box-shadow: none;
  -webkit-transition: color 200ms ease, box-shadow 200ms ease;
  transition: color 200ms ease, box-shadow 200ms ease;
  font-family: Roboto, sans-serif;
  color: grey;
  font-size: 16px;
  font-weight: 400;
}

.link-nav:hover {
  box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .5);
  color: #000;
}

.link-nav.w--current {
  box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .5);
  color: #000;
}
/* END NAVIGATION BAR*/
  
/* LINKS */
.anchor {
	padding-top: 100px;
	margin-top: -100px;
	z-index: -1;
}

.link {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  padding: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-style: none;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  font-family: Roboto, sans-serif;
  color: #9b9b9b;
  font-size: 12px;
  text-align: center;
  letter-spacing: 1px;
  text-decoration: none;
  text-transform: uppercase;
}
  
.link:hover {
  background-image: none;
}
  
.link.w--current {
  position: relative;
  text-decoration: line-through;
}

.big-link {
  margin-bottom: 10px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  color: #000;
  font-size: 50px;
  line-height: 80px;
}
/* END LINKS */

.paragraph {
  width: auto;
  margin-bottom: 30px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  color: #9b9b9b;
  font-size: 20px;
  line-height: 32px;
  font-weight: 400;
}
  
.column {
  overflow: hidden;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px none #000;
}
  
.column._100vh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.field {
  height: 60px;
  margin-bottom: 45px;
  padding-left: 0px;
  border-style: solid;
  border-width: 1px;
  border-color: #fff #fff #bbb;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  font-size: 22px;
}

.button {
  padding: 25px 55px;
  background-color: #000;
  -webkit-transition: background-color 400ms ease, box-shadow 400ms ease, color 400ms ease;
  transition: background-color 400ms ease, box-shadow 400ms ease, color 400ms ease;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  font-size: 18px;
}

.button:hover {
  background-color: #fff;
  box-shadow: inset 0 0 0 3px #000;
  color: #000;
}

.container {
  padding-top: 50px;
}

/* PROJECTS and SECTIONS */
.title {
  padding-top: 5vw;
  padding-left: 5vw;
  padding-right: 5vw;
  margin-bottom: 5vw;
}

.small-title {
	font-size: 50%;
	font-weight: 300;
	color: gray;
}

.section {
  padding-left: 5vw;
  padding-right: 5vw;
}

.project-link {
  box-shadow: inset 0 -2px 0 0 hsla(0, 0%, 100%, .2);
  color: #fff;
}

.project-link:hover {
  box-shadow: inset 0 -2px 0 0 #fff;
  color: #fff;
}

.paragraph-2 {
  margin-bottom: 0px;
}

.project-description {
  color: #7a7a7a;
  font-size: 18px;
}

/* Text */
mini {
	font-size: 80%;
	font-weight: 300;
	color: grey;
	text-transform: none;
}

/* CUSTOM SCREENS */  
@media (max-width: 600px) {
  	.navbar {
		text-align: center;
		height: 150px;
	}
	
	.w-nav-brand img {
		width: 50%;
		margin-left: auto;
		margin-right: auto;
	}
	
	.nav-menu {
		padding-top: 0px;
		float: left;
	}
	
	main {
		padding-top: 150px;
	}
}

